# dotenv-lint

./: README.md  pyproject.toml
.venv_build/: pyvenv.cfg
src/dotenv_lint/: __init__.py  checks.py  cli.py  parser.py
src/dotenv_lint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/envfile_lint.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_check_blank_placeholder.py  test_check_drift.py  test_check_duplicates.py  test_check_key_naming.py  test_check_malformed.py  test_cli.py  test_parser.py  test_summary.py
